:pencil: add header

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,13 @@
 //COLORS
-$primary-red: #d11e1e;
-$primary-dark-grey: #292525;
-$secondary-white: #fbfbfb;
-$secondary-light-grey: #dbd6d6;
-$tertiary-black: #130101;
+$color-darkGreen: #63a68d;
+$color-lightGreen: #8abfac;
+$color-darkPink: #f2ab9b;
+$color-lightPink: #f2d1c9;
+$color-light-grey: #f2f2f2;
+
+// Color Theme in RGBA
+$color-darkGreen-rgba: rgba(99, 166, 141, 1);
+$color-lightGreen-rgba: rgba(138, 191, 172, 1);
+$color-darkPink-rgba: rgba(242, 171, 155, 1);
+$color-lightPink-rgba: rgba(242, 209, 201, 1);
+$color-light-grey-rgba: rgba(242, 242, 242, 1);
