--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,10 @@
 @import "reset.scss";
 
+@import "fonts.scss";
+@import "variables.scss";
+
+@import "header.scss";
+
 * {
   box-sizing: border-box;
 }
