:construction: installing CKEditor

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,7 +3,7 @@
 @import "fonts.scss";
 @import "variables.scss";
 
-@import "header.scss";
+@import "homepage.scss";
 
 * {
   box-sizing: border-box;
